# TimeseriesToolkit

./: README.md  pyproject.toml
data/: bitcoin.csv  sample_dataset.csv  sample_dataset_drifted.csv
src/timeseries_toolkit/: AutoLSTM.py  DataDriftDetector.py  TimeSeriesAnomalyDetector.py  TimeSeriesFeatureEngineering.py  TimeSeriesSuitabilityScorer.py  __init__.py
tests/: demo.py  test_aapl.py  test_air.py  test_autolstm.py  test_bitcoin.py  test_drift.py  test_retail.py  test_scorer.py
